fix init db with all migrations
